--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Contact Me</title>
   </head>
   <body>
-    <h4><a src="/index.html">Homepage</a></h4>
-    <h4><a src="/photo.html"></a>Photos</h4>
-    <h4><a src="/contact.html"></a>Contact Me</h4>
+    <div class="navigation-links d-flex justify-content-evenly mb-2">
+      <div class="p-2"><a href="/index.html">Homepage</a></div>
+      <div class="p-2"><a href="/photo.html">Photos</a></div>
+      <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+    </div>
 
-    <h1>Contact Me</h1>
-    <h2>Contact me for more information</h2>
-    <div class="contact-link">
-      <a href="mailto:julie.gardner361@gmail.com"
-        >✉️julie.gardner361@gmail.com</a
+    <h1 class="mt-5">Contact Me</h1>
+    <h4 class="text-center opacity-75">Contact me for more information</h4>
+    <div class="text-center p-5">
+      <a href="mailto:julie.gardner361@gmail.com" class="text-decoration-none"
+        ><span class="fs-1 me-2 align-middle">✉️ </span
+        ><span class="fs-4 align-middle"> julie.gardner361@gmail.com</span></a
       >
     </div>
   </body>
