--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Croissant</title>
   </head>
   <body>
-    <h4><a src="/index.html">Homepage</a></h4>
-    <h4><a src="/photo.html"></a>Photos</h4>
-    <h4><a src="/contact.html"></a>Contact Me</h4>
+    <div class="navigation-links d-flex justify-content-evenly mb-2">
+      <div class="p-2"><a href="/index.html">Homepage</a></div>
+      <div class="p-2"><a href="/photo.html">Photos</a></div>
+      <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+    </div>
 
-    <h1>Croissant</h1>
-    <h2>Welcome to my website!</h2>
+    <h1 class="mt-5">Croissant</h1>
+    <h4 class="text-center opacity-75">Welcome to my website!</h4>
   </body>
 </html>
