--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,15 @@
 
     <h1 class="mt-5">Contact Me</h1>
     <h4 class="text-center opacity-75">Contact me for more information</h4>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
     <div class="text-center p-5">
       <a href="mailto:julie.gardner361@gmail.com" class="text-decoration-none"
-        ><span class="fs-1 me-2 align-middle">✉️ </span
-        ><span class="fs-4 align-middle"> julie.gardner361@gmail.com</span></a
+        ><span class="fs-1 me-2 align-middle">💌 </span
+        ><span class="fs-5 align-middle"> julie.gardner361@gmail.com</span></a
       >
     </div>
   </body>
