--- a/photo.html
+++ b/photo.html
@@ -22,9 +22,30 @@
 
     <h1 class="mt-5">Croissant Photos</h1>
     <h4 class="text-center opacity-75">Enjoy the photos</h4>
-    <div class="row">
-      <div class="col-md-4">
-        <img href="" alt="" />
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="/images/croissant-1.jpg"
+            alt="croissant"
+            class="img-fluid rounded p-3 shadow"
+          />
+        </div>
+        <div class="col-md-4">
+          <img
+            src="/images/croissant-2.jpg"
+            alt="croissant"
+            class="img-fluid rounded p-3 shadow"
+          />
+        </div>
+        <div class="col-md-4">
+          <img
+            src="/images/croissant-3.jpg"
+            alt="croissant"
+            class="img-fluid rounded p-3 shadow"
+          />
+        </div>
       </div>
     </div>
   </body>
