Added a container, styled background, changed images

--- a/contact.html
+++ b/contact.html
@@ -13,25 +13,23 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Contact Me</title>
   </head>
-  <body>
+  <body class="mt-5">
     <div class="navigation-links d-flex justify-content-evenly mb-2">
       <div class="p-2"><a href="/index.html">Homepage</a></div>
       <div class="p-2"><a href="/photo.html">Photos</a></div>
       <div class="p-2"><a href="/contact.html">Contact Me</a></div>
     </div>
 
-    <h1 class="mt-5">Contact Me</h1>
-    <h4 class="text-center opacity-75">Contact me for more information</h4>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-    <div class="text-center p-5">
-      <a href="mailto:julie.gardner361@gmail.com" class="text-decoration-none"
-        ><span class="fs-1 me-2 align-middle">💌 </span
-        ><span class="fs-5 align-middle"> julie.gardner361@gmail.com</span></a
-      >
+    <div class="page-container rounded">
+      <h1 class="mt-5">Contact Me</h1>
+      <h4 class="text-center opacity-75">Contact me for more information</h4>
+
+      <div class="text-center p-5">
+        <a href="mailto:julie.gardner361@gmail.com" class="text-decoration-none"
+          ><span class="fs-1 me-2 align-middle">💌 </span
+          ><span class="fs-5 align-middle"> julie.gardner361@gmail.com</span></a
+        >
+      </div>
     </div>
   </body>
 </html>
