--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Croissant</title>
   </head>
-  <body>
-    <div class="navigation-links d-flex justify-content-evenly mb-2">
-      <div class="p-2"><a href="/index.html">Homepage</a></div>
-      <div class="p-2"><a href="/photo.html">Photos</a></div>
-      <div class="p-2"><a href="/contact.html">Contact Me</a></div>
-    </div>
+  <body class="mt-5">
+    <div class="page-container rounded">
+      <div class="navigation-links d-flex justify-content-evenly mb-2">
+        <div class="p-2"><a href="/index.html">Homepage</a></div>
+        <div class="p-2"><a href="/photo.html">Photos</a></div>
+        <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+      </div>
 
-    <h1 class="mt-5">Croissant</h1>
-    <h4 class="text-center opacity-75">Welcome to my website!</h4>
+      <h1 class="mt-5">Croissant</h1>
+      <h4 class="text-center opacity-75 pb-5">Welcome to my website!</h4>
+    </div>
   </body>
 </html>
