--- a/photo.html
+++ b/photo.html
@@ -13,38 +13,40 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Photos</title>
   </head>
-  <body>
-    <div class="navigation-links d-flex justify-content-evenly mb-2">
-      <div class="p-2"><a href="/index.html">Homepage</a></div>
-      <div class="p-2"><a href="/photo.html">Photos</a></div>
-      <div class="p-2"><a href="/contact.html">Contact Me</a></div>
-    </div>
+  <body class="mt-5">
+    <div class="page-container rounded">
+      <div class="navigation-links d-flex justify-content-evenly mb-2">
+        <div class="p-2"><a href="/index.html">Homepage</a></div>
+        <div class="p-2"><a href="/photo.html">Photos</a></div>
+        <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+      </div>
 
-    <h1 class="mt-5">Croissant Photos</h1>
-    <h4 class="text-center opacity-75">Enjoy the photos</h4>
+      <h1 class="mt-5">Croissant Photos</h1>
+      <h4 class="text-center opacity-75">Enjoy the photos</h4>
 
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-md-4">
-          <img
-            src="/images/croissant-1.jpg"
-            alt="croissant"
-            class="img-fluid rounded p-3 shadow"
-          />
-        </div>
-        <div class="col-md-4">
-          <img
-            src="/images/croissant-2.jpg"
-            alt="croissant"
-            class="img-fluid rounded p-3 shadow"
-          />
-        </div>
-        <div class="col-md-4">
-          <img
-            src="/images/croissant-3.jpg"
-            alt="croissant"
-            class="img-fluid rounded p-3 shadow"
-          />
+      <div class="container mt-5 p-4 pb-5">
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="/images/croissant-4.jpg"
+              alt="croissant"
+              class="img-fluid rounded p-3 shadow"
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="/images/croissant-5.jpg"
+              alt="croissant"
+              class="img-fluid rounded p-3 shadow"
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="/images/croissant-3.jpg"
+              alt="croissant"
+              class="img-fluid rounded p-3 shadow"
+            />
+          </div>
         </div>
       </div>
     </div>
