--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Butterlybakery is a woman-ran, locally-owned business. Everything is made in house every morning. Come in and enjoy a croissant. Email me with any questions you have."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,13 +15,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Contact Me</title>
+    <title>butterlybakery.com - Contact Me for More Information</title>
   </head>
   <body class="mt-5">
-    <div class="navigation-links d-flex justify-content-evenly mb-2">
-      <div class="p-2"><a href="/index.html">Homepage</a></div>
-      <div class="p-2"><a href="/photo.html">Photos</a></div>
-      <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+    <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
+      <div class="p-2"><a href="/index.html">ButterlyBakery.com</a></div>
+      <div class="p-2"><a href="/photo.html">Portfolio</a></div>
+      <div class="p-2"><a href="/contact.html">Keep in Touch</a></div>
     </div>
 
     <div class="page-container rounded">
