--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Butterlybakery is a woman-ran, locally-owned business. Everything is made in house every morning. Come in and enjoy a croissant. Until then, learn more about croissants."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,18 +15,47 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Croissant</title>
+    <title>butterlybakery.com - History & Description of Croissants</title>
   </head>
   <body class="mt-5">
     <div class="page-container rounded">
-      <div class="navigation-links d-flex justify-content-evenly mb-2">
-        <div class="p-2"><a href="/index.html">Homepage</a></div>
-        <div class="p-2"><a href="/photo.html">Photos</a></div>
-        <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+      <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
+        <div class="p-2"><a href="/index.html">ButterlyBakery.com</a></div>
+        <div class="p-2"><a href="/photo.html">Portfolio</a></div>
+        <div class="p-2"><a href="/contact.html">Keep in Touch</a></div>
       </div>
 
-      <h1 class="mt-5">Croissant</h1>
-      <h4 class="text-center opacity-75 pb-5">Welcome to my website!</h4>
+      <h2 class="mt-5 mb-0 fs-1 text-center">Croissant</h2>
+      <h1 class="text-center opacity-75 pt-1 fs-4 m-0">
+        For a fresh change, try ButterlyBakery
+      </h1>
+      <p class="p-5">
+        A croissant is a buttery, flaky, Austrian viennoiserie pastry inspired
+        by the shape of the Austrian kipferl but using the French yeast-leavened
+        laminated dough. Croissants are named for their historical crescent
+        shape, the dough is layered with butter, rolled and folded several times
+        in succession, then rolled into a thin sheet, in a technique called
+        laminating. The process results in a layered, flaky texture, similar to
+        a puff pastry.
+        <br />
+        <br />
+        Crescent-shaped breads have been made since the Renaissance, and
+        crescent-shaped cakes possibly since antiquity. Kipferls have long been
+        a staple of Austrian, and French bakeries and pâtisseries. The modern
+        croissant was developed in the early 20th century when French bakers
+        replaced the brioche dough of the kipferl with a yeast-leavened
+        laminated dough. In the late 1970s, the development of factory-made,
+        frozen, preformed but unbaked dough made them into a fast food that
+        could be freshly baked by unskilled labor. The croissant bakery, notably
+        the La Croissanterie chain, was a French response to American-style fast
+        food, and as of 2008, 30–40% of the croissants sold in French bakeries
+        and patisseries were baked from frozen dough.
+        <a
+          href="https://en.wikipedia.org/wiki/Croissant"
+          class="d-block text-decoration-none pt-2"
+          >wikipedia</a
+        >
+      </p>
     </div>
   </body>
 </html>
