--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Butterlybakery is a woman-ran, locally-owned business. Everything is made in house every morning. Come in and enjoy a croissant. Until then, enjoy the photos of our fresh croissants."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,39 +15,41 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Photos</title>
+    <title>butterlybakery.com - Croissant Photos</title>
   </head>
   <body class="mt-5">
     <div class="page-container rounded">
-      <div class="navigation-links d-flex justify-content-evenly mb-2">
-        <div class="p-2"><a href="/index.html">Homepage</a></div>
-        <div class="p-2"><a href="/photo.html">Photos</a></div>
-        <div class="p-2"><a href="/contact.html">Contact Me</a></div>
+      <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
+        <div class="p-2"><a href="/index.html">ButterlyBakery.com</a></div>
+        <div class="p-2"><a href="/photo.html">Portfolio</a></div>
+        <div class="p-2"><a href="/contact.html">Keep in Touch</a></div>
       </div>
 
-      <h1 class="mt-5">Croissant Photos</h1>
-      <h4 class="text-center opacity-75">Enjoy the photos</h4>
+      <h2 class="mt-5 mb-0 fs-1 text-center">Croissant Photos</h2>
+      <h1 class="text-center opacity-75 pt-1 fs-4 m-0">
+        For a fresh change, try ButterlyBakery
+      </h1>
 
       <div class="container mt-5 p-4 pb-5">
         <div class="row">
           <div class="col-md-4">
             <img
               src="/images/croissant-4.jpg"
-              alt="croissant"
+              alt="croissant latte breakfast blue plate"
               class="img-fluid rounded p-3 shadow"
             />
           </div>
           <div class="col-md-4">
             <img
               src="/images/croissant-5.jpg"
-              alt="croissant"
+              alt="croissant books preparing croissant flowers teapot"
               class="img-fluid rounded p-3 shadow"
             />
           </div>
           <div class="col-md-4">
             <img
               src="/images/croissant-3.jpg"
-              alt="croissant"
+              alt="savory croissant sweet croissant esspresso flowers lattes breakfast date"
               class="img-fluid rounded p-3 shadow"
             />
           </div>
