Added titles to navigation links

--- a/photo.html
+++ b/photo.html
@@ -33,9 +33,19 @@
   <body class="mt-5">
     <div class="page-container rounded">
       <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
-        <div class="p-2"><a href="/index.html">ButterlyBakery.com</a></div>
-        <div class="p-2"><a href="/photo.html">Portfolio</a></div>
-        <div class="p-2"><a href="/contact.html">Keep in Touch</a></div>
+        <div class="p-2">
+          <a href="/" title="butterlybakery.com homepage">ButterlyBakery.com</a>
+        </div>
+        <div class="p-2">
+          <a href="/photo.html" title="butterlybakery.com portfolio"
+            >Portfolio</a
+          >
+        </div>
+        <div class="p-2">
+          <a href="/contact.html" title="contact butterlybakery.com"
+            >Keep in Touch</a
+          >
+        </div>
       </div>
 
       <h2 class="mt-5 mb-0 fs-1 text-center">Croissant Photos</h2>
