--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,17 @@
   </head>
   <body class="mt-5">
     <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
-      <div class="p-2"><a href="/index.html">ButterlyBakery.com</a></div>
-      <div class="p-2"><a href="/photo.html">Portfolio</a></div>
-      <div class="p-2"><a href="/contact.html">Keep in Touch</a></div>
+      <div class="p-2">
+        <a href="/" title="butterlybakery.com homepage">ButterlyBakery.com</a>
+      </div>
+      <div class="p-2">
+        <a href="/photo.html" title="butterlybakery.com portfolio">Portfolio</a>
+      </div>
+      <div class="p-2">
+        <a href="/contact.html" title="contact butterlybakery.com"
+          >Keep in Touch</a
+        >
+      </div>
     </div>
 
     <div class="page-container rounded">
