updated the contact page

--- a/contact.html
+++ b/contact.html
@@ -31,23 +31,32 @@
     <title>butterlybakery.com - Contact Me for More Information</title>
   </head>
   <body class="mt-5">
-    <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
-      <div class="p-2">
-        <a href="/" title="butterlybakery.com homepage">ButterlyBakery.com</a>
-      </div>
-      <div class="p-2">
-        <a href="/photo.html" title="butterlybakery.com portfolio">Portfolio</a>
-      </div>
-      <div class="p-2">
-        <a href="/contact.html" title="contact butterlybakery.com"
-          >Keep in Touch</a
-        >
-      </div>
-    </div>
-
     <div class="page-container rounded">
-      <h1 class="mt-5">Contact Me</h1>
-      <h4 class="text-center opacity-75">Contact me for more information</h4>
+      <div class="navigation-links d-flex justify-content-evenly pt-2 mb-2">
+        <div class="p-2">
+          <a href="/" title="butterlybakery.com homepage">ButterlyBakery.com</a>
+        </div>
+        <div class="p-2">
+          <a href="/photo.html" title="butterlybakery.com portfolio"
+            >Portfolio</a
+          >
+        </div>
+        <div class="p-2">
+          <a href="/contact.html" title="contact butterlybakery.com"
+            >Keep in Touch</a
+          >
+        </div>
+      </div>
+
+      <h2 class="mt-5 mb-0 fs-1 text-center">Keep in Touch</h2>
+      <h1 class="text-center opacity-75 pt-1 fs-4 m-0">
+        For a fresh change, try ButterlyBakery
+      </h1>
+
+      <p class="text-center mt-5">
+        Ask me all of your croissant-related questions. I look forward to
+        hearing from you!
+      </p>
 
       <div class="text-center p-5">
         <a href="mailto:julie.gardner361@gmail.com" class="text-decoration-none"
